unpackaged/objects/wb_Member__c.object
<CustomObject>
    <description>WellBe Membership</description>
    <fields>
        <fullName>AdmissionFee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>入会員金</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員 (入会員金)</relationshipLabel>
        <relationshipName>AdmissionFee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>会員終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>個人</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>会員</relationshipLabel>
        <relationshipName>MDMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MembershipDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員契約詳細</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員</relationshipLabel>
        <relationshipName>MembershipDetailMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_MemberNo__c</fullName>
        <externalId>true</externalId>
        <label>旧会員番号</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会員</relationshipLabel>
        <relationshipName>CompanyEmployeeMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_Classification__c</fullName>
        <formula>if(IsBlank(r_EffectiveUntil__c),&apos;&apos;,if(r_EffectiveUntil__c&gt;= TODAY(),&apos;会員&apos;,&apos;退会者&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompany__c</fullName>
        <formula>MembershipDetail__r.Membership__r.ContractCompany__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCountry__c</fullName>
        <formula>MembershipDetail__r.Membership__r.ContractCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_MemberNo__c</fullName>
        <formula>MembershipDetail__r.MemberNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>r_EffectiveUntil__c</fullName>
        <label>有効終了日</label>
        <summarizedField>wb_MemberHistory__c.EffectiveUntil__c</summarizedField>
        <summaryForeignKey>wb_MemberHistory__c.member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>r_effectiveness__c</fullName>
        <label>有効</label>
        <summaryFilterItems>
            <field>wb_MemberHistory__c.r_effectiveness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>wb_MemberHistory__c.member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>会員</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>